# IronSQL

./: .gitignore  Attention.MD  CMakeLists.txt  CODE-RULES.MD  LICENSE  Makefile  README-en_US.MD  README.MD  makec++.sh  sql-beta.sql  sql-ecommerce.sql  sql-stress_test.sql  test_bug1.sql  test_bug2.sql  test_bugs.sql
bug/.begin_2026_03_28_09_23/: file-format.md
scripts_config/: readme-en_us.md  readme.md
scripts_config/linux/: linuxconf.sh
scripts_config/win32/: windowsconf.ps1  windowsconf.sh
src/: iron_main.cpp  resource.rc  resource.rc.in
src/.config/: iron_welcome_en_US.txt  readme.md
src/.config/.syntax/: Ironsql_syntax_help_zh_CN.txt  ironsql_syntax_help_en_US.txt
src/.config/.syntax/en_us/: ironsql_syntax_en_US_create.txt  ironsql_syntax_en_US_drop.txt  ironsql_syntax_en_US_help.txt  ironsql_syntax_en_US_insert.txt  ironsql_syntax_en_US_show.txt
src/.config/.syntax/zh_cn/: ironsql_syntax_zh_CN_create.txt  ironsql_syntax_zh_CN_insert.txt  ironsql_syntax_zh_CN_select.txt  ironsql_syntax_zh_CN_show.txt
src/.include/: iron_cross_platform.hpp  readme.md
src/.ironfsystem/: iron_file_system.cpp  iron_file_system.hpp  reame.md
src/.linux/: iron_linux_systempath.cpp  iron_linux_systempath.hpp  readme.md
src/.package/: readme.md
src/.path/: iron_path_init.cpp  iron_path_init.hpp  iron_path_linux.cpp  iron_path_linux.hpp  iron_path_manage.cpp  iron_path_manage.hpp  iron_path_windows.cpp  iron_path_windows.hpp  readme.md
src/.recode/: readme.md
src/.windows/: readme.md
src/fsystem/: iron_read_help_info.cpp  iron_read_help_info.hpp
src/include/: iron_fmtout.hpp  iron_handle.hpp  iron_help.hpp  iron_langs.hpp  iron_parser.hpp  iron_pathfs.hpp  iron_server.hpp  iron_server_settings.hpp  iron_status.hpp  iron_syntax.hpp  readme.md
src/kernel/: iron_keywds.cpp  iron_keywds.hpp  iron_proces.cpp  iron_proces.hpp  iron_proces_attribute.cpp  iron_syntax.cpp  iron_verify.cpp  iron_verify.hpp  iron_verify_att0.cpp  iron_verify_att0.hpp
src/loads/: iron_load_settings_conf.cpp  iron_load_settings_conf.hpp  readme.md
src/logsystem/: iron_logsystem.cpp  iron_logsystem.hpp
src/network/: readme.md
src/other/: readme.md
src/psystem/: iron_path_system.cpp  iron_path_system.hpp
src/release/: iron_attribute.hpp  iron_object.cpp  iron_object.hpp  iron_struct.hpp
src/stdiostreams/: iron_stdio.hpp  iron_stdost.cpp  iron_stdost.hpp  iron_stdout.cpp  iron_stdout.hpp  readme.md
src/test/: iron_test.cpp  iron_test.hpp
src/writes/: readme.md
syn/: IronSQL_Settings_zh_CN.txt  IronSQL_Syntax_Readme.md  IronSQL_Syntax_zh_CN.txt
test/: sql-0-test-format-out-0.sql  sql-0-test-xxx.sql
test/res/: sql-0-ecommerce_sql.txt  sql-0-test-format-out-0_sql.txt  sql-0-test-stress_sql.txt  sql-0-test-xxx_sql.txt
